Test/traits/TraitExtend.dfy.expect
TraitExtend.dfy(40,21): Error: wrong number of arguments (got 2, but function 'Mul' expects 3: (x: int, y: int, z: int))
TraitExtend.dfy(41,21): Error: wrong number of arguments (got 3, but function 'Plus' expects 2: (x: int, y: int))
2 resolution/type errors detected in TraitExtend.dfy
